2007-01-18 Anatoly Sokolov <aesok@post.ru>

	* common/macros.inc (__AVR_HAVE_MUL__): Define.
	* libc/misc/mul10.S (__mulhi_const_10): Use __AVR_HAVE_MUL__ instead
	of __AVR_ENHANCED__.

2007-01-14 Anatoly Sokolov <aesok@post.ru>

	* configure.ac: Add tests for the AT90PWM1 support.
	* devtools/gen-avr-lib-tree.sh: Add support for AT90PWM1 device.
	* include/avr/io.h: (Ditto.).
	* include/avr/wdt.h: (Ditto.).
	* include/avr/io90pwm1.h: new file.
	* include/avr/Makefile.am: include new file.
	* doc/api/main_page.dox: Document support for AT90PWM1 device.
	* doc/api/using-tools.dox: (Ditto.)

2007-01-14 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Robert Schiele:
	* include/stdint.h: Exclude 64-bit types when -mint8 is in effect.
	* include/avr/pgmspace.h: (Ditto.)

2007-01-08 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/boot.h (boot_lock_bits_set): Fix a typo: BLB11 needs
	to be programmed (rather than BLB12) in order to prevent the
	application from overwriting the boot loader section.
	Closes bug #18115: online documentation typo/bug avr/boot.h

2007-01-08 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdio.h: Document that malloc() is no longer needed for
	floating-point conversions as it once used to be.
	Closes bug #18688: vfscanf and vfprintf don't use malloc

2007-01-08 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix broken seeding of the PRNGs when seeding with 0.
	This fix is courtesy Andrew Chernov from the FreeBSD
	project (rev. 1.21 of their random.c).
	* libc/stdlib/random.c (do_random): seed with another (arbitrary) value
	when attempting to seed with 0.
	* libc/stdlib/rand.c (do_rand): (Ditto.)
	Closes bug #18662: rand() keeps returning the same value if seeded with 0

2007-01-01 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix breakage for strtod() on avr6 architectures caused
	by calling __prologue_saves__.
	Fixes bug #18509: strtod.S crashes due to stack problem with atmega
	2560